# DRCorridorKey

./: .gitignore  PluginPlan.md  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml
ofx_plugin/: WORKSTATION_GUIDE.md  __init__.py
ofx_plugin/core/: __init__.py  checkerboard.py  color.py  composite.py  despill.py  export.py  matte.py  normalize.py  postprocess.py  preprocess.py  resize.py
ofx_plugin/cpp/: CMakeLists.txt
ofx_plugin/cpp/src/: color.h  corridorkey_effect.cpp  corridorkey_effect.h  plugin_main.cpp  postprocess.h  preprocess.h
ofx_plugin/tests/: conftest.py  test_checkerboard.py  test_color.py  test_composite.py  test_cross_validation.py  test_despill.py  test_edge_cases.py  test_export.py  test_matte.py  test_normalize.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_resize.py
resolve_plugin/: OFX_PORT_BREAKDOWN.md  README.md  Start_CorridorKey_Service.bat  __init__.py  __main__.py  app.py  cleanup.py  config.py  engine_manager.py  install_fuse.bat  install_fuse.sh  models.py  output_writer.py  path_security.py  ppm.py  start_corridorkey_service.sh
resolve_plugin/Fuses/: CorridorKey.fuse
resolve_plugin/tests/: __init__.py  conftest.py  test_cleanup.py  test_config.py  test_models.py  test_output_writer.py  test_path_security.py
